--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "prompt-sync": "^4.2.0",
+    "prompts": "^2.4.2",
     "sharp": "^0.33.4",
     "text-to-svg": "^3.1.5"
   }
